--- a/form.html
+++ b/form.html
@@ -53,19 +53,19 @@
 	
 	<div class="con_imgs">
 		<img src="media/congress16_1.png" alt="speaker" id = "pg3_1">
-		<img src="media/Congress16_1.png" alt="speaker" id = "pg3_1">
+		<img src="media/congress16_1.png" alt="speaker" id = "pg3_1">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
 	<div class="con_imgs">
 		<img src="media/congress16_2.png" alt="audience" id = "pg3_2">
-		<img src="media/Congress16_2.png" alt="audience" id = "pg3_2">
+		<img src="media/congress16_2.png" alt="audience" id = "pg3_2">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
 	<div class="con_imgs">
 		<img src="media/congress16_3.png" alt="group" id = "pg3_3">
-		<img src="media/Congress16_3.png" alt="group" id = "pg3_3">
+		<img src="media/congress16_3.png" alt="group" id = "pg3_3">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
