--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<!-- Video Section -->
   <section class="video">
-    <video controls>
+    <video controls muted autoplay>
       <source src="media/video.mp4" type="video/mp4">
       <source src="media/video.ogg" type="video/ogg">
       <h3>Your browser does not support videoplay.</h3>
