Add font and try to fix tab 3

--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
   <title>Join Us | ISUD</title>
   <link rel="stylesheet" type="text/css" href="css/screen.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link rel="icon" href="media/Logo.png">
   <script async src="js/script.js"></script>
 </head>
