--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Home|ISUD</title>
-  <link rel="stylesheet" type="text/css" href="css/screen.css">
-  <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="icon" href="media/Logo.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-  <script src="js/script.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home|ISUD</title>
+    <link rel="stylesheet" type="text/css" href="css/screen.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="icon" href="media/Logo.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <script src="js/script.js"></script>
 </head>
-	
+
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="form.html">Join Us</a>
-    </nav>
-    <img class="logo" src="media/logo.png" alt="ISUD Logo">
-    <p class="title">The International Society for Universal Dialogue</p>
-  </header>
-	
-	<!-- Video Section -->
-  <section class="video">
-    <video controls muted autoplay>
-      <source src="media/video.mp4" type="video/mp4">
-      <source src="media/video.ogg" type="video/ogg">
-      <h3>Your browser does not support videoplay.</h3>
-    </video>
-  </section>
-	
-	<!-- Sentences Section -->
-  <div class="quote">
-    <p>Every human is like all other humans, some other humans and no other human. -Clyde Kluckhohn</p>
-  </div>
-  <div class="argument">
-    <p>Do you want to join an international origination with people who believe very different things than you do?</p>
-  </div>
-  <div class="join-us">
-    <p>Join Us Today by Signing Up in: <a href="form.html">Join Us</a></p>
-  </div>
+    <header>
+        <nav>
+            <ul>
+                <li id="nav-active"><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="form.html">Join Us</a></li>
+            </ul>
+        </nav>
+        <img class="logo" src="media/Logo.png" alt="ISUD Logo">
+        <p class="title">The International Society for Universal Dialogue</p>
+    </header>
+
+    <!--Video Section -->
+    <div class="video">
+        <video controls autoplay muted>
+            <source src="media/video.mp4" type="video/mp4">
+            <source src="media/video.ogg" type="video/ogg">
+        </video>
+    </div>
+    <!-- Sentences Section -->
+    <div class="quote">
+        <p>Every Human is like all other humans, some other humans and no other humans. -Clyde Kluckhohn</p>
+    </div>
+    <div class="argument">
+        <p>Do you want to join an international origination with people who believe very different things than you do?</p>
+    </div>
+    <div class="join-us">
+        <p>Join Us Today by signing up in:</p>
+        <a href="form.html">Join Us</a>
+    </div>
 </body>
 </html>
