--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home|ISUD</title>
     <link rel="stylesheet" type="text/css" href="css/screen.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="icon" href="media/Logo.png">
+    <link rel="icon" href="media/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <script src="js/script.js"></script>
 </head>
@@ -20,7 +20,7 @@
                 <li><a href="form.html">Join Us</a></li>
             </ul>
         </nav>
-        <img class="logo" src="media/Logo.png" alt="ISUD Logo">
+        <img class="logo" src="media/logo.png" alt="ISUD Logo">
         <p class="title">The International Society for Universal Dialogue</p>
     </header>
 
