--- a/form.html
+++ b/form.html
@@ -15,9 +15,11 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="form.html" class="active">Join Us</a>
+      <ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="aboutus.html">About Us</a></li>
+	<li id="nav-active"><a href="form.html">Join Us</a></li>
+      </ul>
     </nav>
   </header>
 	
