--- a/aboutus.html
+++ b/aboutus.html
@@ -17,9 +17,9 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="aboutus.html" class="active">About Us</a>
-      <a href="form.html">Join Us</a>
+      <li><a href="index.html">Home</a></li>
+      <li id="nav-active"><a href="aboutus.html">About Us</a>
+      <li><a href="form.html">Join Us</a></li>
     </nav>
   </header>
 
