removing onsubmit from form

--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
   <div id="fullcontain">
     <div class="divline"></div>
       <div id="full_form">
-        <form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
+        <form id="valForm" name="sign_up_form" action="#null" method="get" autocomplete="on">
 	  <fieldset>
             <label for="firstname">First Name:</label>
 	    <input type="text" name="f_name" id="firstname" placeholder="Enter First Name">
