--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
 	</form>
       </div>
       <div id="sc_container">
-	<button type="button" class="button1">Facebook</button>
+	<button type="button" class="button1"><a href="https://www.facebook.com/">Facebook</button>
 	<button type="button" class="button2">LinkedIn</button>
 	<button type="button" class="button3">Google+</button>
       </div>
