--- a/form.html
+++ b/form.html
@@ -48,9 +48,9 @@
 	</form>
       </div>
       <div id="sc_container">
-	<button type="button" class="button1"><a href="https://www.facebook.com/">Facebook</button>
-	<button type="button" class="button2">LinkedIn</button>
-	<button type="button" class="button3">Google+</button>
+	<a href="https://www.facebook.com/"><button type="button" class="button1">Facebook</button></a>
+	<a href="https://www.linkedin.com/"><button type="button" class="button2">LinkedIn</button></a>
+	<a href="https://www.google.com/account/about/"><button type="button" class="button3">Google+</button></a>
       </div>
   </div>
 	
