--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav class = "navigation">
       <a href="index.html">Home</a>
       <a href="aboutus.html" class="active">About Us</a>
       <a href="form.html">Join Us</a>
