--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav class = "navigation">
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="form.html" class="active">Join Us</a>
