--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 <body>
   <header>
-    <nav>
+    <nav class = "navigation">
       <a href="index.html" class="active">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="form.html">Join Us</a>
