fixing social media button error

--- a/form.html
+++ b/form.html
@@ -48,9 +48,9 @@
 	</form>
       </div>
       <div id="sc_container">
-	<a href="https://www.facebook.com/"><button type="button" class="button1">Facebook</button></a>
-	<a href="https://www.linkedin.com/"><button type="button" class="button2">LinkedIn</button></a>
-	<a href="https://www.google.com/account/about/"><button type="button" class="button3">Google+</button></a>
+	<a href="https://www.facebook.com/" class="button1">Facebook</a>
+	<a href="https://www.linkedin.com/" class="button2">LinkedIn</a>
+	<a href="https://www.google.com/account/about/" class="button3">Google+</a>
       </div>
   </div>
 	
